--- a/support/agent/video-mirror.service
+++ b/support/agent/video-mirror.service
@@ -9,7 +9,7 @@ Type=simple
 ExecStart=ffmpeg -f v4l2 -i /dev/video0 -codec copy -f v4l2 /dev/video1
 Restart=always
 RestartSec=1
-StartLimitIntervalSec=0
+StartLimitInterval=0
 
 [Install]
 WantedBy=multi-user.target
