--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ pydantic = {extras = ["dotenv"], version = "^1.8.1"}
 loguru = "^0.5.3"
 single-source = "^0.1.5"
 uvicorn = {extras = ["standard"], version = "^0.13.4"}
+bitmath = "^1.3.3"
+psutil = "^5.8.0"
+vcgencmd = "^0.1.1"
+py-cpuinfo = "^8.0.0"
+gitpython = "^3.1.15"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
@@ -24,3 +29,7 @@ safety = "^1.10.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "piwheels"
+url = "https://www.piwheels.org/simple/"
