--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ vcgencmd = "^0.1.1"
 py-cpuinfo = "^8.0.0"
 gitpython = "^3.1.15"
 arrow = "^1.1.0"
+obd = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
@@ -26,6 +27,7 @@ bandit = "^1.7.0"
 dodgy = "^0.2.1"
 mypy = "^0.812"
 safety = "^1.10.3"
+elm327-emulator = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
