--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dodgy = "^0.2.1"
 mypy = "^0.812"
 safety = "^1.10.3"
 elm327-emulator = "^2.1.0"
+gixy = "^0.1.20"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
